--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "next": "13.5.5",
     "react": "^18",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
-    "next": "13.5.5"
+    "react-icons": "^4.11.0",
+    "sass": "^1.69.4"
   },
   "devDependencies": {
     "eslint": "^8",
